 Bug 476097, ASSERTION: killing mutation events with <input type=file>, r+sr=bz